<?xml version="1.0"?>
<package>
  <name>labrom_sensors</name>
  <version>0.0.1</version>
  <description>Launches labrom sensors</description>

  <maintainer email="aerialrobotteam@gmail.com">EESC - Aerial Robot Team (ART)</maintainer>
  <license>GPL</license>

  <!-- <url type="website">http://wiki.ros.org/uspart_camera</url> -->


  <author email="romulortrtr@gmail.com">Rômulo T Rodrigues</author> 


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>usb_cam</build_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>usb_cam</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
