<?xml version="1.0"?>
<package>
  <name>labrom_camera</name>
  <version>0.0.1</version>
  <description>LabRoM camera repository</description>

  <maintainer email="aerialrobotteam@gmail.com">EESC - Aerial Robot Team (ART)</maintainer>
  <license>GPL</license>
  <author email="romulortrtr@gmail.com">Rômulo T Rodrigues</author> 


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>usb_cam</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
