<?xml version="1.0"?>
<package>
  <name>labrom_sensors</name>
  <version>0.0.0</version>
  <description>labrom sensors repository</description>

  <maintainer email="marco.nc.arruda@gmail.com">Marco Antonio Arruda</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>serial_sonar</run_depend> 
  <run_depend>usb_cam</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>